--- a/AspNetCoreTodo/AspNetCoreTodo.csproj
+++ b/AspNetCoreTodo/AspNetCoreTodo.csproj
@@ -4,15 +4,14 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>aspnet-AspNetCoreTodo-07241ad2-db81-47fe-8ef6-a003241a4a52</UserSecretsId>
+    <UserSecretsId>aspnet-AspNetCoreTodo-2bc45338-e996-47e7-ab9a-b602f95d2cd9</UserSecretsId>
   </PropertyGroup>
 
-  <ItemGroup>
-    <None Update="app.db" CopyToOutputDirectory="PreserveNewest" ExcludeFromSingleFile="true" />
-  </ItemGroup>
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
 
   <ItemGroup>
-    <PackageReference Include="Humanizer" Version="3.0.0-beta.54" />
+    <PackageReference Include="Humanizer" Version="2.14.1" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.7" />
